# image_split

./: .gitignore  README.md  setup.py  split.py
deepsim-dskit/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_dskit_examples.py
deepsim-dskit/.github/workflow/: publish.yml
deepsim-dskit/configs/: advertising_baseline.json  advertising_baseline.yaml  advertising_gb_v1.json  advertising_gb_v1.yaml
deepsim-dskit/docs/: conf.py  configuration.rst  framework.rst  index.rst  quickstart.rst
deepsim-dskit/docs/api/: index.rst
deepsim-dskit/dskit/: __init__.py  artifacts.py  cli.py  config.py  data_io.py  eda.py  feature_engineering.py  modeling.py  performance.py  persistence.py  pipeline.py  preprocessing.py  reproducibility.py  splitting.py  toolkit.py  utils.py
deepsim-dskit/examples/: advertising_pipeline.ipynb  advertising_pipeline.py
deepsim-dskit/examples/data/splits/advertising_example/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
deepsim-dskit/examples/logs/: advertising_example.jsonl
deepsim-dskit/examples/production/: config.json  features.json  metadata.json  metrics.json  model.joblib  pipeline.joblib
deepsim-dskit/experiments/advertising_baseline/: config.json  metadata.json  metrics.json  model.joblib  pipeline.joblib
deepsim-dskit/experiments/unit_exp/: config.json  features.json  metadata.json  metrics.json  model.joblib  pipeline.joblib
deepsim-dskit/tests/: conftest.py  test_cli.py  test_config.py  test_data_io.py  test_modeling.py  test_pipeline.py  test_preprocessing.py  test_splitting.py  test_utils.py
docs/: example.ipynb
image_data_split.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
image_split/: .gitignore  LICENSE  split.py
image_split/docs/: example.ipynb
image_split/image_split/: __init__.py
