[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "deepsim-dskit"
version     = "1.0.0"
description = "A reusable data science toolkit for production-ready pipelines"
readme      = "README.md"
license     = "MIT"
authors     = [
    {name = "Shouke Wei", email = "shouke@deepsim.ca"}
]
maintainers = [
    {name = "Deepsim Intelligence Technology Inc."}
]
keywords    = [
    "data science", "machine learning", "pipeline",
    "preprocessing", "feature engineering", "modeling"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5",
    "numpy>=1.20",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "statsmodels>=0.13",
    "joblib>=1.2",
]

[project.optional-dependencies]
polars  = ["polars>=0.18"]
yaml    = ["pyyaml>=6.0"]
image   = []
dev     = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
all = [
    "polars>=0.18",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage      = "https://deepsim.ca"
Repository    = "https://github.com/shoukewei/deepsim-dskit"
Documentation = "https://github.com/shoukewei/deepsim-dskit/docs"
"Bug Tracker" = "https://github.com/shoukewei/deepsim-dskit/issues"

[project.scripts]
dskit-run = "dskit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dskit*"]

[tool.setuptools.package-data]
dskit = ["py.typed"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --cov=dskit --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length    = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select      = ["E", "F", "W", "I"]
ignore      = ["E501"]

[tool.mypy]
python_version         = "3.9"
ignore_missing_imports = true
strict                 = false
